k8s-client/kubernetes/istio-client-ns-deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: k8s-client
  namespace: vj-istio
spec:
  selector:
    app: client
    release: test
  ports:
    - port: 8080
      name: http
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: k8s-client
  namespace: vj-istio
  labels:
    app: client
    release: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
      release: test
  template:
    metadata:
      labels:
        app: client
        release: test
    spec:
      containers:
      - name: k8s-client-container
        image: vprince/k8s-client-image:latest
        ports:
        - containerPort: 8080
