k8s-client/kubernetes/k8s-client-deployment.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: k8s-client
  labels:
    release: test
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      release: test
      app: client
  template:
    metadata:
      labels:
        release: test
        app: client
    spec:
      containers:
      - name: k8s-client-container
        image: vprince/k8s-client-image:latest
        ports:
        - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: k8s-client-service
spec:
  type: NodePort
  selector:
    app: client
    release: test
  ports:
  - nodePort: 30164
    port: 8080
