k8s-client/kubernetes/istio-client-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: client-gateway
  namespace: vj-istio
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: k8s-client
spec:
  hosts:
  - "*"
  gateways:
  - client-gateway
  http:
  - match:
    - uri:
        exact: /welcome
    route:
    - destination:
        host: k8s-client
        port:
          number: 8080
